draft-packages/tile/KaizenDraft/Tile/components/GenericTile.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/spacing";
@import "~@kaizen/design-tokens/sass/shadow";
@import "~@kaizen/component-library/styles/layout";
@import "~@kaizen/component-library/styles/animation";
@import "~@kaizen/component-library/styles/responsive";

$tileWidth: 330px;
$tileHeight: 370px;

.root {
  perspective: 800px;
}

.tile {
  width: $tileWidth;
  height: $tileHeight;
  position: relative;
  box-shadow: $kz-shadow-small-box-shadow;
  background-color: $kz-color-white;
  transition: transform $ca-duration-slow $ca-default;
  transform-style: preserve-3d;
  border-radius: 7px;

  @include ca-media-mobile {
    width: 100%;
  }
}

.face {
  position: absolute;
  background-color: $kz-color-white;
  border-radius: 7px;
  padding: $kz-spacing-lg $kz-spacing-md $kz-spacing-md;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 100%;

  backface-visibility: hidden;
}

.faceBack {
  transform: rotateY(180deg);
}

.isFlipped {
  transform: rotateY(179deg);
}

.title {
  text-align: center;
  padding-bottom: $kz-spacing-sm;
}

.actions {
  padding-top: $kz-spacing-sm;
  display: flex;
}

.informationBtn {
  @include ca-position($top: 0, $end: 0);
  position: absolute;
  color: rgba($kz-color-wisteria-800, 0.5);
}

.information {
  @include ca-padding(
    $top: 18px,
    $bottom: $kz-spacing-md,
    $start: $kz-spacing-md,
    $end: $kz-spacing-md
  );
  @include ca-position($bottom: 0);
  display: flex;
  flex-direction: column;
  align-items: center;
  box-sizing: border-box;
  background-color: $kz-color-cluny-100;
  position: absolute;
  width: 100%;
  text-align: center;
  border-radius: 0 0 7px 7px;
}

